<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.lucee</groupId>
  <artifactId>core</artifactId>
  <version>5.0.0.141</version>
  <packaging>pom</packaging>

  <name>Lucee Core Build</name>
  <description>Building the Lucee Core File</description>
  <url>https://maven.lucee.org/core/</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <licenses>
    <license>
     <name>The GNU Lesser General Public License, Version 2.1</name>
     <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
     <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>micstriit</id>
      <name>Michael Offner</name>
      <email>michael@lucee.org</email>
      <organization>Lucee Association Switzerland</organization>
      <organizationUrl>https://lucee.org</organizationUrl>
      <roles>
        <role>Project-Administrator</role>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>isapir</id>
      <name>Igal Sapir</name>
      <email>dev@21solutions.net</email>
      <organization>21 Solutions</organization>
      <organizationUrl>http://21solutions.net/</organizationUrl>
      <roles>
          <role>Developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>


    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
            </resource>
        </resources>
    </build>

	<dependencies>
    <dependency>
      <groupId>org.apache.felix</groupId>
      <artifactId>org.apache.felix.framework</artifactId>
      <version>7.0.5</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet.jsp</groupId>
      <artifactId>jsp-api</artifactId>
      <version>2.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.10.11</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>tika-core</artifactId>
      <version>1.28.4</version>
      <scope>provided</scope>
    </dependency>
	<dependency>
  		<groupId>org.lucee</groupId>
  		<artifactId>jzlib</artifactId>
  		<version>1.1.3</version>
    	<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.lucee</groupId>
  		<artifactId>jsch</artifactId>
  		<version>0.1.55</version>
    	<scope>provided</scope>
  	</dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.15</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
  	  <groupId>org.lucee</groupId>
  	  <artifactId>commons-compress</artifactId>
  	  <version>1.9.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-email</artifactId>
      <version>1.2.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>commons-fileupload</artifactId>
    	<version>1.3.2.L0001</version>
      <scope>provided</scope>
    </dependency>
  	<dependency>
  		<groupId>org.lucee</groupId>
  		<artifactId>commons-io</artifactId>
  		<version>2.4.0</version>
      <scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.lucee</groupId>
  		<artifactId>commons-lang</artifactId>
  		<version>2.6.0</version>
      <scope>provided</scope>
  	</dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-logging-adapters</artifactId>
      <version>1.1.0.0000L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-logging-api</artifactId>
      <version>1.1.0.0000L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2.0.0000L</version>
      <scope>provided</scope>
    </dependency>
  	<dependency>
  		<groupId>commons-net</groupId>
  		<artifactId>commons-net</artifactId>
  		<version>3.3</version>
      <scope>provided</scope>
  	</dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-pool2</artifactId>
      <version>2.9.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache</groupId>
      <artifactId>oro</artifactId>
      <version>2.0.8</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.2.0001L</version>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.17.2.0001L</version>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>portlet</artifactId>
    	<version>1.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>xml-apis</artifactId>
    	<version>1.4.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>jta</artifactId>
    	<version>1.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>fusiondebug.api</groupId>
      <artifactId>server</artifactId>
      <version>1.0.20</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpclient</artifactId>
    	<version>4.5.10.0002L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpcore</artifactId>
    	<version>4.4.12</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>httpcomponents-httpmime</artifactId>
    	<version>4.5.10.0002L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.8.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jacob</groupId>
      <artifactId>jacob</artifactId>
      <version>1.16.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javasysmon</groupId>
      <artifactId>javasysmon</artifactId>
      <version>0.3.3</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.samba</groupId>
      <artifactId>jcifs</artifactId>
      <version>1.3.17</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jencrypt</groupId>
      <artifactId>jencrypt</artifactId>
      <version>1.4.2.04</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
	    <groupId>org.ow2.asm</groupId>
	    <artifactId>asm-all</artifactId>
	    <version>4.2</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.lucee</groupId>
    	<artifactId>xml-resolver</artifactId>
    	<version>1.2.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.slf4j</groupId>
    	<artifactId>slf4j-api</artifactId>
    	<version>1.7.36</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
    	<groupId>org.slf4j</groupId>
    	<artifactId>slf4j-nop</artifactId>
    	<version>1.7.36</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ss</groupId>
      <artifactId>css2</artifactId>
      <version>0.9.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>stax</groupId>
      <artifactId>api</artifactId>
      <version>1.0.1.0002L</version>
      <scope>provided</scope>
    </dependency>
	  <dependency>
		  <groupId>javax.mail</groupId>
		  <artifactId>activation</artifactId>
		  <version>1.6.2.0000L</version>
      <scope>provided</scope>
	  </dependency>
    <dependency>
      <groupId>sun.security</groupId>
      <artifactId>jaas</artifactId>
      <version>1.2.4</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>tagsoup</groupId>
      <artifactId>tagsoup</artifactId>
      <version>1.2.1.0002L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>w3c</groupId>
      <artifactId>dom</artifactId>
      <version>1.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.10.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>xmpcore</groupId>
      <artifactId>xmpcore</artifactId>
      <version>5.1.2.0002L</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>argon2</artifactId>
      <version>2.7.0</version>
	  </dependency>
    <dependency>
      <groupId>org.lucee</groupId>
      <artifactId>txtmark</artifactId>
      <version>0.16.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <repositories>
      <repository>
         <id>repo</id>
         <url>https://raw.githubusercontent.com/lucee/mvn/master/releases</url>
      </repository>
      <repository>
        <id>snapi</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      </repository>
      <repository>
        <id>res</id>
        <url>https://oss.sonatype.org/content/repositories/releases/</url>
      </repository>
   </repositories>

  <scm>
    <url>https://github.com/lucee/Lucee</url>
    <connection>scm:git:git://github.com/lucee/Lucee.git</connection>
    <developerConnection>scm:git:git@github.com:lucee/Lucee.git</developerConnection>
    <tag>Plugin to create Lucee Core files.</tag>
  </scm>

  <distributionManagement>
    <repository>
    <id>ossrh</id>
    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
  </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

</project>